Fix index page overflow view

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     align-items: center;
     color: white;
     opacity: 0.6;
+    overflow: hidden;
 }
 
 section {
